--- a/ikana1010/search/templates/search.html
+++ b/ikana1010/search/templates/search.html
@@ -63,7 +63,7 @@ addLoadEvent(initialize);
 <script type="application/javascript">
 	function search() {
 		if(locationMarker == null){
-			alert("Please, click on the map to choose your locacation first.");
+			alert("Please, click on the map to choose your location first.");
 			return;
 		}
 		
