--- a/ikana1010/search/templates/search.html
+++ b/ikana1010/search/templates/search.html
@@ -69,14 +69,16 @@ addLoadEvent(initialize);
 		
 		var latLong = locationMarker.getLatLng();
 		var concept = document.getElementById("concept").value;
+		var distance = document.getElementById("distance").value;
+		
 
-		var params = { 'q': concept, "location": "POINT(" + latLong.lat() + " " + latLong.lng()  + ")"};
+		var params = { "q": concept, "d": distance, "location": "POINT(" + latLong.lat() + " " + latLong.lng()  + ")"};
 		var jsonRequest = new Request.JSON({url: "/search/", onSuccess: process_results}).get(params);
 	}
 	
 	function process_results(responseJSON, responseText) {
 		if(responseJSON.length == 0){
-			alert("There is no results found.");
+			alert("There are no results found.");
 			return;
 		}
 		
@@ -121,7 +123,10 @@ addLoadEvent(initialize);
 <h1>Search near-by people to collaborate with</h1>
 
 	<div id="search_form" style="display: block; visibility: visible;">
-		Enter a keyword to search: <input type="text" id="concept"/> <input type="button" value="Search" onclick="search()"/>	
+		First, choose your location in the map below.<br/>
+		Then, search for people related to <input type="text" id="concept"/> 
+		within <input type="text" id="distance" value="5" size="4"/>km from you.
+		<input type="button" value="Go" onclick="search()"/>	
 	</div>
 
 	<div id="map"></div>
