Added user name line to result bubble

--- a/ikana1010/search/templates/search.html
+++ b/ikana1010/search/templates/search.html
@@ -101,7 +101,14 @@ addLoadEvent(initialize);
 			);
 			
 			GEvent.addListener(marker, "click", function() {
-    			marker.openInfoWindowHtml("<br/>" + rspObj.message);
+    			marker.openInfoWindowHtml(
+					"<br/><p align=\"left\">" 
+					+ rspObj.message 
+					+ "<br>(<em>by  </em></b><a href=/ucgraph/?u=" + rspObj.person_username
+					+ ">" 
+					+ rspObj.person_username 
+					+ "</a>)"
+				);
   			});
 
 			map.addOverlay(marker);
